//! Cluster management gRPC service implementation
//!
//! This module handles cluster operations including node joining/leaving,
//! cluster status queries, and Raft message forwarding.

use crate::{
    node_shared::SharedNodeState,
    grpc_server::common::GrpcMiddleware,
    proto::{
        cluster_service_server::ClusterService,
        JoinRequest, JoinResponse, LeaveRequest, LeaveResponse,
        ClusterStatusRequest, ClusterStatusResponse,
        RaftMessageRequest, RaftMessageResponse,
    },
};
use std::sync::Arc;
use tonic::{Request, Response, Status};

/// Cluster service implementation
#[derive(Clone)]
pub struct ClusterServiceImpl {
    node: Arc<SharedNodeState>,
    middleware: GrpcMiddleware,
}

impl ClusterServiceImpl {
    /// Create a new cluster service instance
    pub fn new(
        node: Arc<SharedNodeState>,
        security_middleware: Option<crate::grpc_security::GrpcSecurityMiddleware>,
    ) -> Self {
        let middleware = GrpcMiddleware::new(security_middleware, None);
        
        Self {
            node,
            middleware,
        }
    }
}

#[tonic::async_trait]
impl ClusterService for ClusterServiceImpl {
    // Cluster management methods
    async fn join_cluster(
        &self,
        request: Request<JoinRequest>,
    ) -> Result<Response<JoinResponse>, Status> {
        Err(Status::unimplemented("join_cluster not implemented"))
    }
    
    async fn leave_cluster(
        &self,
        request: Request<LeaveRequest>,
    ) -> Result<Response<LeaveResponse>, Status> {
        Err(Status::unimplemented("leave_cluster not implemented"))
    }
    
    async fn get_cluster_status(
        &self,
        request: Request<ClusterStatusRequest>,
    ) -> Result<Response<ClusterStatusResponse>, Status> {
        Err(Status::unimplemented("get_cluster_status not implemented"))
    }
    
    // Raft communication
    async fn send_raft_message(
        &self,
        request: Request<RaftMessageRequest>,
    ) -> Result<Response<RaftMessageResponse>, Status> {
        Err(Status::unimplemented("send_raft_message not implemented"))
    }
    
    // Task management
    async fn submit_task(
        &self,
        request: Request<crate::proto::TaskRequest>,
    ) -> Result<Response<crate::proto::TaskResponse>, Status> {
        Err(Status::unimplemented("submit_task not implemented"))
    }
    
    async fn get_task_status(
        &self,
        request: Request<crate::proto::TaskStatusRequest>,
    ) -> Result<Response<crate::proto::TaskStatusResponse>, Status> {
        Err(Status::unimplemented("get_task_status not implemented"))
    }
    
    // VM operations
    async fn create_vm(
        &self,
        request: Request<crate::proto::CreateVmRequest>,
    ) -> Result<Response<crate::proto::CreateVmResponse>, Status> {
        Err(Status::unimplemented("create_vm not implemented"))
    }
    
    async fn create_vm_with_scheduling(
        &self,
        request: Request<crate::proto::CreateVmWithSchedulingRequest>,
    ) -> Result<Response<crate::proto::CreateVmWithSchedulingResponse>, Status> {
        Err(Status::unimplemented("create_vm_with_scheduling not implemented"))
    }
    
    async fn start_vm(
        &self,
        request: Request<crate::proto::StartVmRequest>,
    ) -> Result<Response<crate::proto::StartVmResponse>, Status> {
        Err(Status::unimplemented("start_vm not implemented"))
    }
    
    async fn stop_vm(
        &self,
        request: Request<crate::proto::StopVmRequest>,
    ) -> Result<Response<crate::proto::StopVmResponse>, Status> {
        Err(Status::unimplemented("stop_vm not implemented"))
    }
    
    async fn delete_vm(
        &self,
        request: Request<crate::proto::DeleteVmRequest>,
    ) -> Result<Response<crate::proto::DeleteVmResponse>, Status> {
        Err(Status::unimplemented("delete_vm not implemented"))
    }
    
    async fn list_vms(
        &self,
        request: Request<crate::proto::ListVmsRequest>,
    ) -> Result<Response<crate::proto::ListVmsResponse>, Status> {
        Err(Status::unimplemented("list_vms not implemented"))
    }
    
    async fn get_vm_status(
        &self,
        request: Request<crate::proto::GetVmStatusRequest>,
    ) -> Result<Response<crate::proto::GetVmStatusResponse>, Status> {
        Err(Status::unimplemented("get_vm_status not implemented"))
    }
    
    async fn migrate_vm(
        &self,
        request: Request<crate::proto::MigrateVmRequest>,
    ) -> Result<Response<crate::proto::MigrateVmResponse>, Status> {
        Err(Status::unimplemented("migrate_vm not implemented"))
    }
    
    // VM scheduling operations
    async fn schedule_vm_placement(
        &self,
        request: Request<crate::proto::ScheduleVmPlacementRequest>,
    ) -> Result<Response<crate::proto::ScheduleVmPlacementResponse>, Status> {
        Err(Status::unimplemented("schedule_vm_placement not implemented"))
    }
    
    async fn get_cluster_resource_summary(
        &self,
        request: Request<crate::proto::ClusterResourceSummaryRequest>,
    ) -> Result<Response<crate::proto::ClusterResourceSummaryResponse>, Status> {
        Err(Status::unimplemented("get_cluster_resource_summary not implemented"))
    }
    
    // Health check
    async fn health_check(
        &self,
        request: Request<crate::proto::HealthCheckRequest>,
    ) -> Result<Response<crate::proto::HealthCheckResponse>, Status> {
        Err(Status::unimplemented("health_check not implemented"))
    }
}