//! Monitoring and health check gRPC service implementation
//!
//! This module handles health checks, Raft status queries,
//! and other monitoring-related operations.

use crate::{
    error::{BlixardError, BlixardResult},
    node_shared::SharedNodeState,
    grpc_server::common::{GrpcMiddleware, error_to_status},
    proto::{
        blixard_service_server::BlixardService,
        HealthCheckRequest, HealthCheckResponse,
        GetRaftStatusRequest, GetRaftStatusResponse,
    },
    security::Permission,
    instrument_grpc, record_grpc_error,
};
use std::sync::Arc;
use tonic::{Request, Response, Status};

/// Monitoring service implementation
#[derive(Clone)]
pub struct MonitoringServiceImpl {
    node: Arc<SharedNodeState>,
    middleware: GrpcMiddleware,
}

impl MonitoringServiceImpl {
    /// Create a new monitoring service instance
    pub fn new(
        node: Arc<SharedNodeState>,
        security_middleware: Option<crate::grpc_security::GrpcSecurityMiddleware>,
    ) -> Self {
        let middleware = GrpcMiddleware::new(security_middleware, None);
        
        Self {
            node,
            middleware,
        }
    }
}

// TODO: Implement monitoring-related methods
// For now, this is a stub to ensure compilation