//! Task scheduling gRPC service implementation
//!
//! This module handles task submission, status queries, and
//! distributed task management operations.

use crate::{
    error::{BlixardError, BlixardResult},
    node_shared::SharedNodeState,
    grpc_server::common::{GrpcMiddleware, error_to_status},
    proto::{
        cluster_service_server::ClusterService,
        TaskRequest, TaskResponse, TaskStatusRequest, TaskStatusResponse,
        ProposeTaskRequest, ProposeTaskResponse,
    },
    security::Permission,
    instrument_grpc, record_grpc_error,
};
use std::sync::Arc;
use tonic::{Request, Response, Status};

/// Task service implementation
#[derive(Clone)]
pub struct TaskServiceImpl {
    node: Arc<SharedNodeState>,
    middleware: GrpcMiddleware,
}

impl TaskServiceImpl {
    /// Create a new task service instance
    pub fn new(
        node: Arc<SharedNodeState>,
        security_middleware: Option<crate::grpc_security::GrpcSecurityMiddleware>,
    ) -> Self {
        let middleware = GrpcMiddleware::new(security_middleware, None);
        
        Self {
            node,
            middleware,
        }
    }
}

// TODO: Implement task-related methods
// For now, this is a stub to ensure compilation