//! Network partition simulation tests
//!
//! These tests simulate network partitions at the application level
//! by controlling which nodes can communicate with each other.
#![cfg(feature = "test-helpers")]

use blixard_core::{
    test_helpers::TestCluster,
    proto::{ClusterStatusRequest, CreateVmRequest},
    types::{VmConfig, VmCommand},
};
use std::time::Duration;
use std::collections::HashSet;

/// Helper to check if cluster is in split-brain state
async fn check_for_split_brain(cluster: &TestCluster) -> Result<bool, String> {
    let mut leaders = HashSet::new();
    let mut leader_terms = HashSet::new();
    
    for node in cluster.nodes().values() {
        if let Ok(status) = node.shared_state.get_raft_status().await {
            if status.is_leader {
                leaders.insert(node.id);
                leader_terms.insert((node.id, status.term));
            }
        }
    }
    
    if leaders.len() > 1 {
        return Ok(true); // Multiple leaders = split brain
    }
    
    Ok(false)
}

/// Test that demonstrates current behavior with clean node removal
/// This is NOT a true network partition test
#[tokio::test]
async fn test_clean_removal_not_partition() {
    let _ = blixard_core::metrics_otel::init_noop();
    
    let mut cluster = TestCluster::builder()
        .with_nodes(5)
        .build()
        .await
        .expect("Failed to create 5-node cluster");
    
    println!("Testing clean removal (not a true partition)...");
    
    // Find initial leader
    let initial_leader = cluster.leader_client().await
        .expect("Should have a leader");
    
    let status = initial_leader.clone()
        .get_cluster_status(ClusterStatusRequest {})
        .await
        .expect("Failed to get status")
        .into_inner();
    
    println!("Initial state - Leader: {}, Nodes: {:?}", 
        status.leader_id, status.nodes);
    
    // Get nodes 3, 4, 5
    let minority_nodes: Vec<u64> = status.nodes.iter()
        .skip(2)
        .map(|node| node.id)
        .collect();
    
    println!("Cleanly removing nodes {:?} from cluster...", minority_nodes);
    
    // This is NOT a network partition - it's clean removal
    for &node_id in &minority_nodes {
        if let Ok(node) = cluster.get_node(node_id) {
            // Note: In a real implementation, we'd call leave_cluster here
            println!("Node {} would leave cluster here", node_id);
        }
    }
    
    // The remaining nodes (1, 2) still form a valid cluster
    // They can accept writes because they were not partitioned, just reduced
    
    tokio::time::sleep(Duration::from_secs(2)).await;
    
    // Check if we have split brain
    let has_split_brain = check_for_split_brain(&cluster).await
        .expect("Failed to check split brain");
    
    println!("Split brain detected: {}", has_split_brain);
    
    // This should NOT be split brain - it's a legitimate smaller cluster
    assert!(!has_split_brain, "Clean removal should not cause split brain");
    
    cluster.shutdown().await;
}

/// Simulate network isolation by intercepting messages
/// This would require modifications to the peer connector to support
/// message filtering/dropping
#[tokio::test]
#[ignore = "Requires message interception capability"]
async fn test_true_network_partition() {
    let _ = blixard_core::metrics_otel::init_noop();
    
    let cluster = TestCluster::builder()
        .with_nodes(5)
        .build()
        .await
        .expect("Failed to create 5-node cluster");
    
    println!("Testing true network partition (requires message interception)...");
    
    // In a true partition test, we would:
    // 1. Install message filters that block communication between partitions
    // 2. Nodes remain in the cluster configuration but can't communicate
    // 3. Each partition should elect its own leader
    // 4. Neither partition should be able to make progress (no majority)
    
    // Example of what we'd need:
    // cluster.install_network_filter(|from, to, _msg| {
    //     let partition_a = vec![1, 2];
    //     let partition_b = vec![3, 4, 5];
    //     
    //     // Block messages between partitions
    //     if partition_a.contains(&from) && partition_b.contains(&to) {
    //         return false; // Drop message
    //     }
    //     if partition_b.contains(&from) && partition_a.contains(&to) {
    //         return false; // Drop message
    //     }
    //     true // Allow message
    // });
    
    println!("This test demonstrates what's needed for true partition testing");
    
    cluster.shutdown().await;
}

/// Test partition tolerance - minority partition cannot make progress
#[tokio::test]
async fn test_minority_partition_cannot_write() {
    let _ = blixard_core::metrics_otel::init_noop();
    
    let cluster = TestCluster::builder()
        .with_nodes(5)
        .build()
        .await
        .expect("Failed to create 5-node cluster");
    
    println!("Testing minority partition behavior...");
    
    // Get initial cluster state
    let leader_client = cluster.leader_client().await
        .expect("Should have a leader");
    
    let status = leader_client.clone()
        .get_cluster_status(ClusterStatusRequest {})
        .await
        .expect("Failed to get status")
        .into_inner();
    
    let initial_leader_id = status.leader_id;
    println!("Initial leader: Node {}", initial_leader_id);
    
    // In a real partition scenario with proper message filtering:
    // - Nodes 1,2 (minority) would be isolated from nodes 3,4,5 (majority)
    // - The minority should not be able to elect a leader or accept writes
    // - The majority should continue operating normally
    
    // For now, we can only test the principle by checking Raft properties
    for node in cluster.nodes().values() {
        if let Ok(raft_status) = node.shared_state.get_raft_status().await {
            println!("Node {} - Leader: {}, Term: {}", 
                node.id, raft_status.is_leader, raft_status.term);
        }
    }
    
    // Try to create a VM through each node
    for node in cluster.nodes().values() {
        let vm_config = VmConfig {
            name: format!("partition-test-vm-{}", node.id),
            config_path: format!("/tmp/partition-test-{}.nix", node.id),
            vcpus: 1,
            memory: 256,
            ip_address: None,
            tenant_id: "test".to_string(),
            ip_address: None,
            tenant_id: "test".to_string(),
        };
        let vm_command = VmCommand::Create {
            config: vm_config,
            node_id: node.id,
        };
        
        match node.shared_state.create_vm_through_raft(vm_command).await {
            Ok(_) => {
                println!("✓ Node {} successfully created VM", node.id);
            }
            Err(e) => {
                println!("✗ Node {} failed to create VM: {:?}", node.id, e);
            }
        }
    }
    
    // In a properly partitioned cluster:
    // - Minority nodes should fail with "no leader" or timeout errors
    // - Majority nodes should succeed
    
    cluster.shutdown().await;
}

/// Test partition healing and reconciliation
#[tokio::test]
async fn test_partition_healing() {
    let _ = blixard_core::metrics_otel::init_noop();
    
    let cluster = TestCluster::builder()
        .with_nodes(5)
        .build()
        .await
        .expect("Failed to create 5-node cluster");
    
    println!("Testing partition healing...");
    
    // Create some VMs before "partition"
    let leader_client = cluster.leader_client().await
        .expect("Should have a leader");
    
    for i in 0..3 {
        let vm_config = VmConfig {
            name: format!("pre-partition-vm-{}", i),
            config_path: format!("/tmp/pre-partition-{}.nix", i),
            vcpus: 1,
            memory: 256,
            ip_address: None,
            tenant_id: "test".to_string(),
            ip_address: None,
            tenant_id: "test".to_string(),
        };
        
        let request = CreateVmRequest {
            name: vm_config.name.clone(),
            config_path: vm_config.config_path,
            vcpus: vm_config.vcpus,
            memory_mb: vm_config.memory,
        };
        
        match leader_client.clone().create_vm(request).await {
            Ok(_) => println!("Created VM: pre-partition-vm-{}", i),
            Err(e) => println!("Failed to create VM: {:?}", e),
        }
    }
    
    println!("VMs created before partition. In a real partition test:");
    println!("1. We would partition the network here");
    println!("2. Each partition might create conflicting VMs");
    println!("3. When healed, Raft would reconcile the logs");
    println!("4. The final state would be consistent across all nodes");
    
    // Check final state
    tokio::time::sleep(Duration::from_secs(2)).await;
    
    // All nodes should agree on the same state
    let mut vm_counts = Vec::new();
    for node in cluster.nodes().values() {
        if let Ok(vms) = node.node.list_vms().await {
            vm_counts.push((node.id, vms.len()));
        }
    }
    
    println!("VM counts per node: {:?}", vm_counts);
    
    // All nodes should have the same count
    if !vm_counts.is_empty() {
        let first_count = vm_counts[0].1;
        for (node_id, count) in &vm_counts {
            assert_eq!(*count, first_count, 
                "Node {} has different VM count", node_id);
        }
    }
    
    cluster.shutdown().await;
}

/// Document what's needed for proper network partition testing
#[test]
fn document_partition_testing_requirements() {
    println!("\nNetwork Partition Testing Requirements:");
    println!("=====================================");
    println!();
    println!("Current Limitation:");
    println!("- Tests use clean node removal (leave_cluster)");
    println!("- This creates a smaller valid cluster, not a partition");
    println!("- Removed nodes are no longer part of configuration");
    println!();
    println!("True Network Partition Requirements:");
    println!("1. Message Interception Layer:");
    println!("   - Hook into peer_connector to filter messages");
    println!("   - Block messages between partition groups");
    println!("   - Nodes remain in configuration but can't communicate");
    println!();
    println!("2. Partition Scenarios to Test:");
    println!("   - Even split (2-2-1): No majority, no progress");
    println!("   - Majority/minority (3-2): Majority continues, minority stalls");
    println!("   - Complete isolation: Single node partitions");
    println!();
    println!("3. Expected Behaviors:");
    println!("   - Minority cannot elect leader");
    println!("   - Minority cannot accept writes");
    println!("   - Majority continues normal operation");
    println!("   - No split-brain (two leaders with same term)");
    println!();
    println!("4. Healing Tests:");
    println!("   - Partitions rejoin");
    println!("   - Log reconciliation");
    println!("   - State convergence");
    println!();
    println!("Implementation Approach:");
    println!("- Add MessageFilter trait to peer_connector");
    println!("- Install filters for test scenarios");
    println!("- Or use MadSim for network simulation");
}